# oxide-parser

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE-MIT  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.yml
.github/workflows/: ci.yml  differential-fuzz.yml  fuzz.yml  property-tests.yml  release.yml  sanitizers.yml  security-audit.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: tool_surface.rs
crates/engine/: Cargo.toml
crates/engine/examples/: authoring.rs  capstone_extract_text.rs  compliance.rs  editing.rs  getting_started.rs  inspect.rs  parse_to_markdown.rs  render_bench.rs  sign_document.rs
crates/engine/fonts/: LICENSE-DejaVu.txt  LICENSE-Liberation.txt  README.md
crates/engine/src/: analyzer.rs  attachments.rs  authoring.rs  cancel.rs  chunk.rs  classify.rs  compliance.rs  crypto.rs  docmodel.rs  document.rs  editing.rs  engine.rs  error.rs  filters.rs  fonts_report.rs  fuzz.rs  html.rs  info.rs  lib.rs  object.rs  parse.rs  parser.rs  reader.rs  semantic.rs  signature.rs  structural.rs  writer.rs
crates/engine/src/analysis/: graphics.rs  layout.rs  mod.rs  tables.rs
crates/engine/src/chunk/: tests.rs  tokens.rs
crates/engine/src/classify/: tests.rs
crates/engine/src/content/: mod.rs  operation.rs  parser.rs  state.rs  tokenizer.rs
crates/engine/src/docmodel/: tests.rs
crates/engine/src/eval/: fields.rs  mod.rs  table.rs  text.rs
crates/engine/src/extract/: acroform.rs  mod.rs  profile.rs  spatial.rs  value.rs
crates/engine/src/fonts/: cid.rs  cmap.rs  encoding.rs  glyph_list.rs  mod.rs  resolver.rs  type1.rs  variations.rs
crates/engine/src/images/: ccitt.rs  decoder.rs  encoder.rs  jbig2.rs  jpx.rs  locator.rs  mod.rs  smask.rs
crates/engine/src/ocr/: mod.rs  preprocess.rs
crates/engine/src/parse/: serialize.rs  tests.rs
crates/engine/src/render/: buffer.rs  cmm.rs  color.rs  colorspace.rs  font_rasterizer.rs  function.rs  glyph_cache.rs  glyph_outline.rs  image_painter.rs  line.rs  mod.rs  page_renderer.rs  path.rs  postscript.rs  quality.rs  shading.rs  shaping.rs  svg.rs  text_decode.rs  transform.rs
crates/engine/src/text/: collector.rs  extractor.rs  formatter.rs  mod.rs  reading_order.rs
crates/engine/tests/: attachments.rs  authoring.rs  capstone_integration.rs  chunking.rs  compliance.rs  document_model.rs  document_model_smoke.rs  editing.rs  extract_fields.rs  html_output.rs  info_fonts.rs  integration.rs  layout_analysis.rs  modern_writer.rs  ocr_seam.rs  page_classifier.rs  parallelism.rs  parse_integration.rs  patterns.rs  property_invariants.rs  ps_output.rs  render_quality_vs_reference.rs  render_resource_limits.rs  semantic_extraction.rs  separation.rs  shadings.rs  signatures.rs  structural_ops.rs  structured_fuzz_samples.rs  svg_output.rs  symbolic_fonts.rs  table_extraction.rs  transparency.rs  variable_fonts.rs  writer.rs
crates/engine/tests/fixtures/: sample_type1c.cff  sign_test_rsa_cert.pem  sign_test_rsa_key.pem
crates/engine/tests/synthfont/: mod.rs
crates/oxide-capi/: Cargo.toml  cbindgen.toml
crates/oxide-capi/examples/: extract_text.c  parse_document.c
crates/oxide-capi/include/: oxide.h
crates/oxide-capi/src/: lib.rs
crates/oxide-ocr-tesseract/: Cargo.toml
crates/oxide-ocr-tesseract/src/: lib.rs
crates/oxide-ocr-tesseract/tests/: smoke.rs
crates/oxide-py/: README.md
crates/oxide-wasm/: Cargo.toml
crates/oxide-wasm/examples/browser/: README.md  index.html
crates/oxide-wasm/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  auth.rs  config.rs  error.rs  lib.rs  main.rs  params.rs  processing.rs  rate_limit.rs
crates/server/src/jobs/: id.rs  mod.rs  store.rs  worker.rs
crates/server/src/routes/: analyze.rs  extract_images.rs  extract_text.rs  health.rs  jobs.rs  mod.rs  parse_ops.rs  pdf2img.rs
crates/server/tests/: jobs_integration.rs  pathological_hardening.rs  security_hardening.rs  server_integration.rs
crates/server/tests/pathological/: mod.rs
differential/regressions/: README.md
docs/: api_overview.md  attachments.md  authoring.md  best_in_class_verdict.md  bindings.md  capstone_renderer_benchmark_prompt11.json  capstone_renderer_benchmark_prompt11.md  capstone_sdk_operation_benchmarks.json  capstone_surface_consistency.json  compliance.md  continuous_fuzzing.md  development.md  differential_fuzzing.md  document_parsing.md  editing.md  ga4_renderer_fidelity.md  ga5_release_hardening.md  ga6_release_gate.md  grammar_aware_fuzzing.md  html_output.md  jobs.md  layout_analysis.md  licenses.md  linearization_qpdf_clean_ga1.md  manipulation.md  oxide_sdk.md  oxide_vs_poppler.md  packaging.md  parser_benchmark.md  parser_positioning.md  pdfa_matrix_ga3.md  perf_baseline.md  perf_compare_results.json  perf_prompt4-after_results.json  perf_prompt4-baseline_results.json  perf_prompt_h_results.json  perf_prompt_h_summary.md  poppler_parity_baseline.md  poppler_parity_baseline_results.csv  poppler_parity_baseline_results.json  (+34 more)
extraction-benchmark/: README.md
fuzz/: Cargo.toml  README.md
fuzz/corpus/content_tokenizer/: regression-unterminated-inline-image  seed_content.txt
fuzz/corpus/crypto/: regression-invalid-legacy-key-length
fuzz/corpus/filters/: seed_ascii85.txt  seed_asciihex.txt
fuzz/corpus/parse_pdf/: regression_deep_array_nesting.txt  seed_objects.txt
fuzz/corpus/predictor/: seed_text.txt
fuzz/corpus/structured_pdf/: seed-adversarial-operators
fuzz/fuzz_targets/: cmap.rs  content_tokenizer.rs  crypto.rs  document_rewrite.rs  editing.rs  filters.rs  fonts.rs  functions.rs  image_decoders.rs  linearize.rs  parse_pdf.rs  pdfa.rs  predictor.rs  signature_validation.rs  structured_pdf.rs  writer.rs
renderer-benchmark/: README.md
scripts/: README.md  capstone_bench.py  capstone_surface_check.py  ci_fuzz.py  differential_fuzz.py  ga5_corpus_hardening.py  generate_parity_corpus.py  make_attachment_fixtures.py  make_signature_fixtures.py  perf_bench.py  perf_compare.py  perf_prompt_h.py  poppler_compare.py  public-api-snapshot.ps1  render_quality_prompt_i.py
(+31 files in other folders)
