[package]
name = "oxide-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# This crate is intentionally NOT a member of the root workspace (the root
# `Cargo.toml` lists only engine/server/cli). cargo-fuzz needs nightly +
# libFuzzer and pulls in `libfuzzer-sys`; keeping it out of the workspace
# means `cargo build`/`cargo test` on stable never sees it and stays green.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxide-engine]
path = "../crates/engine"
# Exposes the internal decoder entry points (fuzz_decode_filter, etc.).
features = ["fuzzing"]

# Fuzz targets are built in release with debug assertions + overflow checks on
# so integer-overflow panics and debug_assert! fire during fuzzing.
[profile.release]
debug = 1
debug-assertions = true
overflow-checks = true

[[bin]]
name = "parse_pdf"
path = "fuzz_targets/parse_pdf.rs"
test = false
doc = false
bench = false

[[bin]]
name = "filters"
path = "fuzz_targets/filters.rs"
test = false
doc = false
bench = false

[[bin]]
name = "predictor"
path = "fuzz_targets/predictor.rs"
test = false
doc = false
bench = false

[[bin]]
name = "content_tokenizer"
path = "fuzz_targets/content_tokenizer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "image_decoders"
path = "fuzz_targets/image_decoders.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fonts"
path = "fuzz_targets/fonts.rs"
test = false
doc = false
bench = false

[[bin]]
name = "cmap"
path = "fuzz_targets/cmap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "crypto"
path = "fuzz_targets/crypto.rs"
test = false
doc = false
bench = false

[[bin]]
name = "functions"
path = "fuzz_targets/functions.rs"
test = false
doc = false
bench = false

[[bin]]
name = "writer"
path = "fuzz_targets/writer.rs"
test = false
doc = false
bench = false

[[bin]]
name = "document_rewrite"
path = "fuzz_targets/document_rewrite.rs"
test = false
doc = false
bench = false

[[bin]]
name = "linearize"
path = "fuzz_targets/linearize.rs"
test = false
doc = false
bench = false

[[bin]]
name = "pdfa"
path = "fuzz_targets/pdfa.rs"
test = false
doc = false
bench = false

[[bin]]
name = "editing"
path = "fuzz_targets/editing.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signature_validation"
path = "fuzz_targets/signature_validation.rs"
test = false
doc = false
bench = false

[[bin]]
name = "structured_pdf"
path = "fuzz_targets/structured_pdf.rs"
test = false
doc = false
bench = false
