[package]
name = "oxide-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "oxide"
path = "src/main.rs"

[dependencies]
oxide-engine = { path = "../engine" }
oxide-ocr-tesseract = { path = "../oxide-ocr-tesseract", optional = true }
clap = { version = "4", features = ["derive"] }
rayon = "1"
serde_json = "1"
zip = "2"

[features]
# Pulls in the Tesseract OCR backend (drives the external `tesseract` process,
# no linked C). Off by default so the standard CLI builds pure-Rust with no OCR
# dependency; `--ocr` errors with an actionable message unless this is enabled.
ocr = ["dep:oxide-ocr-tesseract"]
