[package]
name = "oxide-engine"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pure-Rust PDF parsing, rendering, authoring, editing, compliance, and signing engine."
repository = "https://github.com/oxide-pdf/oxide"
documentation = "https://docs.rs/oxide-engine"
homepage = "https://github.com/oxide-pdf/oxide"
keywords = ["pdf", "parser", "rendering", "documents", "signatures"]
categories = ["parser-implementations", "rendering", "text-processing"]
include = ["src/**/*", "fonts/*.ttf", "fonts/LICENSE-*.txt", "fonts/README.md"]

[dependencies]
aes = "0.8"
cbc = "0.1"
sha2 = { version = "0.10", features = ["oid"] }
flate2 = "1"
getrandom = "0.2"
hayro-ccitt = "0.3"
hayro-jbig2 = { version = "0.3", default-features = false, features = ["std"] }
hayro-jpeg2000 = { version = "0.3", default-features = false, features = ["std"] }
image-webp = "0.2"
jpeg-decoder = "0.3"
jpeg-encoder = "0.6"
log = "0.4"
md-5 = "0.10"
png = "0.17"
qcms = { version = "0.3", default-features = true }
rayon = "1"
rustybuzz = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
ttf-parser = "0.21"
unicode-bidi = "0.3"
cms = { version = "0.2", features = ["builder"] }
x509-cert = "0.2"
rsa = { version = "0.9", features = ["sha2"] }
sha1 = { version = "0.10", features = ["oid"] }
const-oid = "0.9"
der = { version = "0.7", features = ["oid"] }
spki = "0.7"
subtle = "2"
zeroize = "1"

[features]
default = ["parse", "render", "structural"]
full = ["parse", "extract", "render", "create", "edit", "structural", "sign", "pdfa", "ocr"]
parse = []
extract = ["parse"]
render = ["parse"]
create = []
edit = ["create", "structural"]
structural = []
sign = []
pdfa = []
ocr = []
# Exposes internal parse/decode entry points (stream filters, etc.) as a
# stable `pub` surface for the out-of-tree `fuzz/` workspace member. Off by
# default so the normal build keeps these implementation details private;
# enabled only when building fuzz targets.
fuzzing = []

[dev-dependencies]
env_logger = "0.11"
proptest = "1"
resvg = { version = "0.47.0", default-features = false, features = ["text", "raster-images"] }
zip = "2"
