[package]
name = "oxide-capi"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "C ABI wrapper for oxide-engine."
repository = "https://github.com/oxide-pdf/oxide"

[lib]
name = "oxide_capi"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
oxide-engine = { version = "0.1.0", path = "../engine" }
serde_json = "1"

[dev-dependencies]
libc = "0.2"
