[package]
name = "oxide-ocr-tesseract"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false
description = "Tesseract OCR backend for oxide-engine, driving the external `tesseract` process (no linked C)."
repository = "https://github.com/oxide-pdf/oxide"

[dependencies]
oxide-engine = { version = "0.1.0", path = "../engine" }
