[package]
name = "oxide-wasm"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
oxide-engine = { path = "../engine" }
serde_json = "1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
getrandom = { version = "0.2", features = ["js"] }

[features]
default = ["panic-hook"]
panic-hook = ["console_error_panic_hook"]
