[package]
name = "oxide-server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Self-hostable HTTP server for the Oxide pure-Rust PDF toolkit."
repository = "https://github.com/oxide-pdf/oxide"
homepage = "https://github.com/oxide-pdf/oxide"
keywords = ["pdf", "server", "documents"]
categories = ["web-programming::http-server"]

[lib]
name = "oxide_server"
path = "src/lib.rs"

[[bin]]
name = "oxide-server"
path = "src/main.rs"

[dependencies]
oxide-engine = { version = "0.1.0", path = "../engine" }

axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "limit"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

bytes = "1"
rayon = "1"
zip = "2"
subtle = "2"
getrandom = "0.3"

[dev-dependencies]
png = "0.17"
flate2 = "1"
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
